[package]
name = "kvs"
version = "0.1.0"
authors = ["Ben Pinhorn <00ben.allen@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = {version = "2.33"}
failure = "0.1.5"
failure_derive = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0.7"
slog="2.4.1"
slog-term="2.4.0"
slog-async="2.3.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
bench = false

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"
bench = false

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"
bench = false

[[bench]]
name = "benches"
harness = false

